--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -27,6 +27,8 @@ services:
       # - ./scrapy/data:/var/www/scrapy/data
       - ./web/app:/var/www/alegreme/app:ro
       - ./web/config:/var/www/alegreme/config:ro
+      - ./web/lib:/var/www/alegreme/lib:ro
+      - ./web/db/backups:/var/www/alegreme/db/backups:ro
       # - ./storage:/var/www/alegreme/storage
       # - ./logs/app:/var/www/alegreme/log:delegated
     environment:
