Adjust Dockerfile to clean assets when build image

--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -86,12 +86,12 @@ ADD . $RAILS_ROOT
 
 RUN bash -c "cat /proc/sys/fs/inotify/max_user_watches"
 
-# RUN rake assets:clobber
-# RUN rake webpacker:clobber
+RUN rake assets:clobber
+RUN rake webpacker:clobber
 
 RUN yarn install
-# RUN rake assets:precompile
-# RUN rake webpacker:compile
+RUN rake assets:precompile
+RUN rake webpacker:compile
 
 EXPOSE 3000
 
