--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -30,6 +30,7 @@ services:
       - ./web/lib:/var/www/alegreme/lib:ro
       - ./web/db/backups:/var/www/alegreme/db/backups:ro
       - ./web/db/migrate:/var/www/alegreme/db/migrate:ro
+      - ./web/public/service-worker.js:/var/www/alegreme/public/service-worker.js
       # - ./storage:/var/www/alegreme/storage
       # - ./logs/app:/var/www/alegreme/log:delegated
     environment:
