--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -31,6 +31,8 @@ services:
       - ./web/db/backups:/var/www/alegreme/db/backups:ro
       - ./web/db/migrate:/var/www/alegreme/db/migrate:ro
       - ./web/public/service-worker.js:/var/www/alegreme/public/service-worker.js
+      - ./web/yarn.lock:/var/www/alegreme/yarn.lock
+      - ./web/package.json:/var/www/alegreme/package.json
       # - ./storage:/var/www/alegreme/storage
       # - ./logs/app:/var/www/alegreme/log:delegated
     environment:
