--- a/web/package.json
+++ b/web/package.json
@@ -7,7 +7,10 @@
     "@material/icon-button": "^4.0.0",
     "@material/tab-bar": "^4.0.0",
     "@material/tab-scroller": "^4.0.0",
+    "@rails/activestorage": "^6.0.3-2",
+    "@rails/ujs": "^6.0.3-2",
     "@rails/webpacker": "https://github.com/rails/webpacker",
+    "channels": "^0.0.4",
     "chart.js": "^2.8.0",
     "chartkick": "^3.1.1",
     "default-passive-events": "^1.0.10",
