--- a/web/Gemfile
+++ b/web/Gemfile
@@ -56,7 +56,8 @@ gem 'webpacker', git: 'https://github.com/rails/webpacker.git'
 # Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
 gem 'jbuilder', '~> 2.7'
 # Use Redis adapter to run Action Cable in production
-gem 'redis', '~> 4.0'
+gem "redis", ">= 4.0", :require => ["redis", "redis/connection/hiredis"]
+gem "hiredis"
 # Use ActiveModel has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
 
@@ -110,54 +111,56 @@ gem 'active_record_extended'
 
 gem 'rack-attack'
 
+gem 'stimulus_reflex'
+
 group :production do
-  gem 'aws-sdk-s3'
-  gem 'sentry-raven'
+	gem 'aws-sdk-s3'
+	gem 'sentry-raven'
 
-  # Cache
-  gem 'dalli'
-  gem 'connection_pool'
+	# Cache
+	# gem 'dalli'
+	gem 'connection_pool'
 
-  # Sidekiq
-  gem 'sidekiq'
-  gem 'sidekiq-scheduler'
-  gem 'sidekiq-unique-jobs'
-  gem 'sinatra', require: nil
+	# Sidekiq
+	gem 'sidekiq'
+	gem 'sidekiq-scheduler'
+	gem 'sidekiq-unique-jobs'
+	gem 'sinatra', require: nil
 end
 
 group :development, :production do
-  gem 'sendgrid-ruby'
+	gem 'sendgrid-ruby'
 end
 
 group :development, :test do
-  # Call 'byebug' anywhere in the code to stop execution and get a debugger console
-  gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
-  gem 'dotenv-rails'
-  gem 'timecop'
+	# Call 'byebug' anywhere in the code to stop execution and get a debugger console
+	gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
+	gem 'dotenv-rails'
+	gem 'timecop'
 end
 
 group :development do
-  # Access an interactive console on exception pages or by calling 'console' anywhere in the code.
-  gem 'web-console', '>= 3.3.0'
-  gem 'listen', '~> 3.2'
-  # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
-  gem 'spring'
-  gem 'spring-watcher-listen', '~> 2.0.0'
-  gem 'awesome_print', require: 'ap'
-  gem 'meta_request'
-  gem 'niceql'
-  # gem 'bullet'
+	# Access an interactive console on exception pages or by calling 'console' anywhere in the code.
+	gem 'web-console', '>= 3.3.0'
+	gem 'listen', '~> 3.2'
+	# Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
+	gem 'spring'
+	gem 'spring-watcher-listen', '~> 2.0.0'
+	gem 'awesome_print', require: 'ap'
+	gem 'meta_request'
+	gem 'niceql'
+	# gem 'bullet'
 end
 
 group :test do
-  # Adds support for Capybara system testing and selenium driver
-  gem 'capybara', '>= 2.15'
-  gem 'selenium-webdriver'
-  # Easy installation and use of chromedriver to run system tests with Chrome
-  gem 'webdrivers'
-  gem 'factory_bot_rails'
-  gem 'database_cleaner'
-  gem 'minitest'
+	# Adds support for Capybara system testing and selenium driver
+	gem 'capybara', '>= 2.15'
+	gem 'selenium-webdriver'
+	# Easy installation and use of chromedriver to run system tests with Chrome
+	gem 'webdrivers'
+	gem 'factory_bot_rails'
+	gem 'database_cleaner'
+	gem 'minitest'
 end
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
