--- a/web/docker/web/nginx.conf
+++ b/web/docker/web/nginx.conf
@@ -87,6 +87,21 @@ server {
         proxy_http_version 1.1;
         proxy_pass http://ml_api;
     }
+    location /cable {
+        proxy_pass http://rails_app;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_pass_request_headers on;
+
+        proxy_buffering off;
+        proxy_redirect off;
+        break;
+    }
     location / {
         proxy_set_header X-Real-IP  $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
