--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -33,6 +33,7 @@ services:
       - ./web/public/service-worker.js:/var/www/alegreme/public/service-worker.js
       - ./web/yarn.lock:/var/www/alegreme/yarn.lock
       - ./web/package.json:/var/www/alegreme/package.json
+      - ./web/Gemfile:/var/www/alegreme/Gemfile
       # - ./storage:/var/www/alegreme/storage
       # - ./logs/app:/var/www/alegreme/log:delegated
     environment:
