--- a/web/Gemfile
+++ b/web/Gemfile
@@ -153,6 +153,7 @@ group :development do
 	gem 'awesome_print', require: 'ap'
 	gem 'meta_request'
 	gem 'niceql'
+	gem 'rack-mini-profiler'
 	# gem 'bullet'
 end
 
