--- a/web/docker/sidekiq/Dockerfile
+++ b/web/docker/sidekiq/Dockerfile
@@ -53,10 +53,11 @@ ENTRYPOINT ["/docker-entrypoint.sh"]
 COPY . $SIDEKIQ_ROOT
 
 RUN yarn install
-RUN rake assets:clobber
-RUN rake webpacker:clobber
-RUN rake assets:precompile
-RUN rake webpacker:compile
+
+RUN bundle exec rake assets:clobber
+RUN bundle exec rake webpacker:clobber
+RUN bundle exec rake assets:precompile
+RUN bundle exec rake webpacker:compile
 
 
 CMD bundle exec sidekiq -C config.yml
