--- a/docker-compose.development.scrapy.yml
+++ b/docker-compose.development.scrapy.yml
@@ -6,7 +6,7 @@ volumes:
   api_data:
   scrapydo_data:
   splash_data:
-  #  redis_data:
+  redis_data:
   # scrapy_shared:
   # search_data:
 services:
@@ -20,16 +20,20 @@ services:
       - scrapy
       # - search
       # - memcached
-      # - redis
+      - redis
       # - bot
     volumes:
       - bundle_cache:/bundle
       - ./scrapy/data:/var/www/scrapy/data
-      - ./web/app:/var/www/alegreme/app:ro
-      - ./web/config:/var/www/alegreme/config:ro
-      - ./web/lib:/var/www/alegreme/lib:ro
-      - ./web/db/backups:/var/www/alegreme/db/backups:ro
-      - ./web/db/migrate:/var/www/alegreme/db/migrate:ro
+      - ./web:/var/www/alegreme
+#      - ./web/config:/var/www/alegreme/config
+#      - ./web/lib:/var/www/alegreme/lib
+#      - ./web/db/backups:/var/www/alegreme/db/backups
+#      - ./web/db/migrate:/var/www/alegreme/db/migrate
+#      - ./web/public/service-worker.js:/var/www/alegreme/public/service-worker.js
+#      - ./web/yarn.lock:/var/www/alegreme/yarn.lock
+#      - ./web/package.json:/var/www/alegreme/package.json
+#      - ./web/Gemfile:/var/www/alegreme/Gemfile
       # - ./storage:/var/www/alegreme/storage
       # - ./logs/app:/var/www/alegreme/log:delegated
     environment:
@@ -45,16 +49,17 @@ services:
       JOB_WORKER_URL: redis://redis:6379/0
       RAILS_MAX_THREADS: 5
       ELASTICSEARCH_URL: http://search:9200
+      REDIS_URL: redis://redis:6379/0
     restart: always
     ports:
       - 3000:3000
     stdin_open: true
     tty: true
     command: bundle exec puma -C config/puma/puma-development.rb
-  #    mem_limit: 6gb
-  #    memswap_limit: 6gb
-  #    mem_reservation: 256m
-  #    cpus: 0.5
+    mem_limit: 2gb
+    memswap_limit: 3gb
+    mem_reservation: 256m
+    cpus: 1
   #  sidekiq:
   #    build:
   #      context: ./web
@@ -119,9 +124,9 @@ services:
       context: ./scrapy
       dockerfile: ./Dockerfile
     environment:
-        SPLASH_URL: http://splash:8050
-        IS_DOCKER: 'true'
-        ENV: 'development'
+      SPLASH_URL: http://splash:8050
+      IS_DOCKER: 'true'
+      ENV: 'development'
     depends_on:
       - splash
     volumes:
@@ -131,8 +136,8 @@ services:
     ports:
       - "7654:7654"
     restart: always
-    mem_limit: 3gb
-    memswap_limit: 4gb
+    mem_limit: 1gb
+    memswap_limit: 1gb
     cpus: 0.5
   splash:
     image: scrapinghub/splash
@@ -142,34 +147,23 @@ services:
     restart: always
     volumes:
       - splash_data:/var/www/splash/data
-    mem_limit: 5gb
-    memswap_limit: 5gb
+    mem_limit: 1gb
+    memswap_limit: 1gb
     mem_reservation: 256m
-    cpus: 0.7
+    cpus: 0.5
     command: --maxrss 4048 --max-timeout 300 --disable-lua-sandbox
-  #  memcached:
-  #    image: memcached
-  #    command: memcached -m 64
-  #    ports:
-  #      - 11211:11211
-  #    restart: always
-  #    mem_limit: 3gb
-  #    memswap_limit: 3gb
-  #    mem_reservation: 256m
-  #    cpus: 0.3
-  #    restart: always
-  #  redis:
-  #    image: redis
-  #    command: redis-server
-  #    volumes:
-  #      - redis_data:/data
-  #    ports:
-  #      - 6379:6379
-  #    mem_limit: 3gb
-  #    memswap_limit: 3gb
-  #    mem_reservation: 256m
-  #    cpus: 0.3
-  #    restart: always
+  redis:
+    image: redis
+    command: redis-server
+    volumes:
+      - redis_data:/data
+    ports:
+      - 6379:6379
+    mem_limit: 1gb
+    memswap_limit: 2gb
+    mem_reservation: 256m
+    cpus: 0.3
+    restart: always
   # web:
   #   build:
   #     context: ./web
