--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -24,7 +24,7 @@ services:
       # - bot
     volumes:
       - bundle_cache:/bundle
-      # - ./scrapy/data:/var/www/scrapy/data
+      - ./scrapy/data:/var/www/scrapy/data
       - ./web:/var/www/alegreme
 #      - ./web/config:/var/www/alegreme/config
 #      - ./web/lib:/var/www/alegreme/lib
@@ -108,9 +108,9 @@ services:
       dockerfile: ./Dockerfile
     ports:
       - "5000:5000"
-    # volumes:
-      # - api_data:/var/www/api/data
-      # - ./scrapy/data:/var/www/scrapy/data:delegated
+    volumes:
+      - api_data:/var/www/api/data
+      - ./scrapy/data:/var/www/scrapy/data:delegated
       # - ./ml/api:/var/www/ml/api:delegated
       # - ./logs/api:/var/www/ml/api/log:delegated
     environment:
@@ -124,9 +124,9 @@ services:
   #     context: ./scrapy
   #     dockerfile: ./Dockerfile
   #   environment:
-  #       SPLASH_URL: http://splash:8050
-  #       IS_DOCKER: 'true'
-  #       ENV: 'development'
+  #     SPLASH_URL: http://splash:8050
+  #     IS_DOCKER: 'true'
+  #     ENV: 'development'
   #   depends_on:
   #     - splash
   #   volumes:
@@ -136,10 +136,9 @@ services:
   #   ports:
   #     - "7654:7654"
   #   restart: always
-  #   mem_limit: 3gb
-  #   memswap_limit: 4gb
+  #   mem_limit: 1gb
+  #   memswap_limit: 1gb
   #   cpus: 0.5
-  #   command: scrapy-do --nodaemon --pidfile= scrapy-do --config scrapydo.conf
   # splash:
   #   image: scrapinghub/splash
   #   ports:
@@ -148,22 +147,11 @@ services:
   #   restart: always
   #   volumes:
   #     - splash_data:/var/www/splash/data
-  #   mem_limit: 5gb
-  #   memswap_limit: 5gb
+  #   mem_limit: 1gb
+  #   memswap_limit: 1gb
   #   mem_reservation: 256m
-  #   cpus: 0.7
+  #   cpus: 0.5
   #   command: --maxrss 4048 --max-timeout 300 --disable-lua-sandbox
-  #  memcached:
-  #    image: memcached
-  #    command: memcached -m 64
-  #    ports:
-  #      - 11211:11211
-  #    restart: always
-  #    mem_limit: 3gb
-  #    memswap_limit: 3gb
-  #    mem_reservation: 256m
-  #    cpus: 0.3
-  #    restart: always
   redis:
     image: redis
     command: redis-server
@@ -174,7 +162,7 @@ services:
     mem_limit: 1gb
     memswap_limit: 2gb
     mem_reservation: 256m
-    cpus: 0.3
+    cpus: 0.5
     restart: always
   # web:
   #   build:
