--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -1,12 +1,13 @@
 version: '2.3'
 volumes:
   bundle_cache: {}
+  app_log:
   db_data:
   db_backup:
   api_data:
+  redis_data:
   # scrapydo_data:
   # splash_data:
-  redis_data:
   # scrapy_shared:
   # search_data:
 services:
@@ -27,16 +28,8 @@ services:
       - ./web:/var/www/alegreme
       - ./web/gems:/bundle/custom_gems
       - ./scrapy/data:/var/www/scrapy/data
-#      - ./web/package.json:/var/www/alegreme/package.json
-#      - ./web/config:/var/www/alegreme/config
-#      - ./web/lib:/var/www/alegreme/lib
-#      - ./web/db/backups:/var/www/alegreme/db/backups
-#      - ./web/db/migrate:/var/www/alegreme/db/migrate
-#      - ./web/public/service-worker.js:/var/www/alegreme/public/service-worker.js
-#      - ./web/yarn.lock:/var/www/alegreme/yarn.lock
-#      - ./web/Gemfile:/var/www/alegreme/Gemfile
+      - app_log:/var/www/alegreme/log
       # - ./storage:/var/www/alegreme/storage
-      # - ./logs/app:/var/www/alegreme/log:delegated
     environment:
       RAILS_ENV: development
       RACK_ENV: development
