--- a/web/Gemfile
+++ b/web/Gemfile
@@ -115,7 +115,7 @@ gem 'rack-attack'
 
 gem 'stimulus_reflex'
 gem 'view_component', require: 'view_component/engine'
-gem 'view_component_reflex', path: '/bundle/custom_gems/view_component_reflex'
+gem 'view_component_reflex', github: 'jonatassalgado/view_component_reflex', branch: 'master'
 
 
 group :production do
