--- a/web/package.json
+++ b/web/package.json
@@ -26,6 +26,7 @@
     "morphdom": "^2.5.4",
     "nanoevents": "^2.0.0",
     "query-string": "^6.4.2",
+    "resolve-url-loader": "^3.1.2",
     "simple-scrollbar": "^0.4.0",
     "sticky-sidebar": "^3.3.1",
     "stimulus": "^1.1.1",
