--- a/web/config/cable.yml
+++ b/web/config/cable.yml
@@ -1,14 +1,14 @@
 development:
-  adapter: redis
-  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/0" } %>
-  channel_prefix: app_development
+  adapter: async
+#  url: <%#= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
+#  channel_prefix: app_development
 
 test:
-  adapter: redis
-  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/0" } %>
-  channel_prefix: app_test
+  adapter: test
+#  url: <%#= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
+#  channel_prefix: app_test
 
 production:
   adapter: redis
-  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/0" } %>
+  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
   channel_prefix: app_production
