--- a/web/config/cable.yml
+++ b/web/config/cable.yml
@@ -1,7 +1,7 @@
 development:
-  adapter: async
-#  url: <%#= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
-#  channel_prefix: app_development
+  adapter: redis
+  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
+  channel_prefix: app_development
 
 test:
   adapter: test
