--- a/web/docker/sidekiq/Dockerfile
+++ b/web/docker/sidekiq/Dockerfile
@@ -54,9 +54,9 @@ COPY . $SIDEKIQ_ROOT
 
 RUN yarn install
 
-RUN bundle exec rake assets:clobber
+# RUN bundle exec rake assets:clobber
 RUN bundle exec rake webpacker:clobber
-RUN bundle exec rake assets:precompile
+# RUN bundle exec rake assets:precompile
 RUN bundle exec rake webpacker:compile
 
 
