--- a/docker-compose.development.scrapy.yml
+++ b/docker-compose.development.scrapy.yml
@@ -2,13 +2,11 @@ version: '2.3'
 volumes:
   bundle_cache: {}
   db_data:
+  app_log:
   db_backup:
   api_data:
-  scrapydo_data:
   splash_data:
   redis_data:
-  # scrapy_shared:
-  # search_data:
 services:
   app:
     build:
@@ -18,24 +16,12 @@ services:
       - db
       - api
       - scrapy
-      # - search
-      # - memcached
       - redis
-      # - bot
     volumes:
       - bundle_cache:/bundle
       - ./scrapy/data:/var/www/scrapy/data
       - ./web:/var/www/alegreme
-#      - ./web/config:/var/www/alegreme/config
-#      - ./web/lib:/var/www/alegreme/lib
-#      - ./web/db/backups:/var/www/alegreme/db/backups
-#      - ./web/db/migrate:/var/www/alegreme/db/migrate
-#      - ./web/public/service-worker.js:/var/www/alegreme/public/service-worker.js
-#      - ./web/yarn.lock:/var/www/alegreme/yarn.lock
-#      - ./web/package.json:/var/www/alegreme/package.json
-#      - ./web/Gemfile:/var/www/alegreme/Gemfile
-      # - ./storage:/var/www/alegreme/storage
-      # - ./logs/app:/var/www/alegreme/log:delegated
+      - app_log:/var/www/alegreme/log
     environment:
       RAILS_ENV: development
       RACK_ENV: development
@@ -47,9 +33,9 @@ services:
       HTTP_HOST: 'www.alegreme.com'
       NODE_ENV: development
       JOB_WORKER_URL: redis://redis:6379/0
-      RAILS_MAX_THREADS: 5
+      RAILS_MAX_THREADS: 3
       ELASTICSEARCH_URL: http://search:9200
-      REDIS_URL: redis://redis:6379/0
+      REDIS_URL: redis://redis:6379/1
     restart: always
     ports:
       - 3000:3000
@@ -135,7 +121,7 @@ services:
       - ./logs/scrapy:/var/www/scrapy/log
     ports:
       - "7654:7654"
-    restart: always
+    restart: on-failure
     mem_limit: 1gb
     memswap_limit: 1gb
     cpus: 0.5
@@ -144,7 +130,7 @@ services:
     ports:
       - 8050:8050
       - 5023:5023
-    restart: always
+    restart: on-failure
     volumes:
       - splash_data:/var/www/splash/data
     mem_limit: 1gb
