Update to bundler 2

--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -61,8 +61,8 @@ ENV PATH="${BUNDLE_BIN}:${PATH}"
 
 COPY Gemfile Gemfile
 
+RUN gem install bundler
 RUN bundle install --jobs 20 --retry 5 --path ${BUNDLE_PATH}
-RUN bundle update --bundler
 
 ADD . $RAILS_ROOT
 
