Remove package-lock.json to follow yarn pattern

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ TODO.md
 .idea/workspace.xml
 web/.generators
 web/.rakeTasks
+web/package-lock.json
 web/webpack-stats.json
 ml/api/log/
 hint-report/
