--- a/web/docker/sidekiq/Dockerfile
+++ b/web/docker/sidekiq/Dockerfile
@@ -33,6 +33,7 @@ COPY ./docker/sidekiq/config.yml config.yml
 
 RUN gem install bundler
 COPY Gemfile Gemfile
+COPY Gemfile.lock Gemfile.lock
 
 RUN bundle install
 
