Fix in Dockerfile for compile css

--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -66,7 +66,9 @@ RUN bash -c "cat /proc/sys/fs/inotify/max_user_watches"
 
 RUN yarn install
 
+RUN bundle exec rake assets:clobber
 RUN bundle exec rake webpacker:clobber
+RUN bundle exec rake assets:precompile
 RUN bundle exec rake webpacker:compile
 
 EXPOSE 3000
