--- a/web/Gemfile
+++ b/web/Gemfile
@@ -109,9 +109,9 @@ gem 'active_record_extended'
 
 gem 'rack-attack'
 
-gem 'stimulus_reflex'
+gem 'stimulus_reflex', '~> 3.4'
 gem 'view_component', require: 'view_component/engine'
-gem 'view_component_reflex', github: 'jonatassalgado/view_component_reflex', branch: 'master'
+gem 'view_component_reflex'
 # gem 'view_component_reflex', path: '/var/www/alegreme/gems/view_component_reflex', group: :development
 
 group :production do
