--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     "@rails/activestorage": "^6.0.3-2",
     "@rails/ujs": "^6.0.3-2",
     "@rails/webpacker": "https://github.com/rails/webpacker",
+    "autoprefixer": "^9",
     "channels": "^0.0.4",
     "chart.js": "^2.8.0",
     "chartkick": "^3.1.1",
@@ -24,13 +25,15 @@
     "mobile-detect": "^1.4.3",
     "morphdom": "^2.5.4",
     "nanoevents": "^2.0.0",
+    "postcss": "^7",
+    "postcss-loader": "^4.1.0",
     "query-string": "^6.4.2",
     "resolve-url-loader": "^3.1.2",
     "simple-scrollbar": "^0.4.0",
     "sticky-sidebar": "^3.3.1",
     "stimulus": "^2.0.0",
     "stimulus_reflex": "^3.3.0",
-    "tailwindcss": "^1.5.1",
+    "tailwindcss": "^2.0.1-compat",
     "tailwindcss-elevation": "^0.3.4",
     "turbolinks": "^5.2.0",
     "velocity-animate": "^2.0.6"
