Update ruby version from 2.6.3 to 2.7.2

--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,4 +1,4 @@
-FROM ruby:2.6.3
+FROM ruby:2.7.2
 
 RUN apt-get update && apt-get install -y locales locales-all
 RUN sed -i -e 's/# en_US.UTF-8 UTF-8/en_US.UTF-8 UTF-8/' /etc/locale.gen && locale-gen
@@ -29,8 +29,8 @@ RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y \
       libpq-dev \
   && rm -rf /var/lib/apt/lists/*
 
-RUN rm -fr /usr/local/bin/bundle
-RUN gem install --no-document bundler
+#RUN rm -fr /usr/local/bin/bundle
+#RUN gem install --no-document bundler
 
 RUN apt-get update && curl --silent --location https://deb.nodesource.com/setup_12.x | bash - && apt-get install -y nodejs --no-install-recommends && rm -rf /var/lib/apt/lists/*
 
@@ -58,18 +58,18 @@ COPY Gemfile Gemfile
 COPY Gemfile.lock Gemfile.lock
 
 RUN gem install bundler
-RUN bundle install
+#RUN bundle install
 
 ADD . $RAILS_ROOT
 
-RUN bash -c "cat /proc/sys/fs/inotify/max_user_watches"
+#RUN bash -c "cat /proc/sys/fs/inotify/max_user_watches"
 
-RUN yarn install
+#RUN yarn install
 
-RUN bundle exec rake assets:clobber
-RUN bundle exec rake webpacker:clobber
-RUN bundle exec rake assets:precompile
-RUN bundle exec rake webpacker:compile
+#RUN bundle exec rake assets:clobber
+#RUN bundle exec rake webpacker:clobber
+#RUN bundle exec rake assets:precompile
+#RUN bundle exec rake webpacker:compile
 
 EXPOSE 3000
 
