--- a/web/Gemfile
+++ b/web/Gemfile
@@ -1,15 +1,15 @@
 source 'https://rubygems.org'
 git_source(:github) { |repo| "https://github.com/#{repo}.git" }
 
-ruby '2.6.3'
+ruby '2.7.2'
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
-gem 'rails', '~> 6.0'
+gem 'rails', '6.0.0'
 # Use sqlite3 as the database for Active Record
 gem 'sqlite3', '~> 1.4'
 gem 'pg'
 # Use Puma as the app server
-gem 'puma', '~> 4.1'
+gem 'puma', '~> 5.0'
 # Use SCSS for stylesheets
 gem 'sass-rails', '>= 6'
 # Use Uglifier as compressor for JavaScript assets
@@ -17,13 +17,14 @@ gem 'uglifier', '>= 1.3.0'
 # See https://github.com/rails/execjs#readme for more supported runtimes
 gem 'mini_racer', platforms: :ruby
 
-gem "jsonb_accessor", "~> 1.0.0"
+gem 'rake', '13.0.3'
+# gem "jsonb_accessor", "~> 1.1.0"
 
 # Calendar
-gem "simple_calendar", "~> 2.0"
+# gem "simple_calendar", "~> 2.0"
 
 # Materialize
-gem 'materialize-sass', '~> 1.0.0'
+# gem 'materialize-sass', '~> 1.0.0'
 
 gem 'friendly_id', '~> 5.2.4'
 
@@ -31,7 +32,7 @@ gem 'friendly_id', '~> 5.2.4'
 gem 'rpush'
 
 # Devise
-gem 'devise'
+gem 'devise', github: 'heartcombo/devise', branch: 'ca-omniauth-2'
 gem 'omniauth-google-oauth2'
 gem 'omniauth-facebook'
 gem 'recaptcha'
@@ -56,7 +57,7 @@ gem "browser", require: "browser/browser"
 # Turbolinks makes navigating your web application faster. Read more: https://github.com/turbolinks/turbolinks
 # gem 'turbolinks', '~> 5.2.0'
 # Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
-gem 'jbuilder', '~> 2.7'
+gem 'jbuilder', '~> 2.11'
 # Use Redis adapter to run Action Cable in production
 
 # Use ActiveModel has_secure_password
@@ -80,11 +81,11 @@ gem 'groupdate'
 gem 'httparty'
 
 # Reduces boot times through caching; required in config/boot.rb
-gem 'bootsnap', '>= 1.4.2', require: false
+gem 'bootsnap', '>= 1.4.4', require: false
 
 # gem 'mini_magick'
 
-gem 'image_processing', '~> 1.0'
+gem 'image_processing', '~> 1.12'
 # gem 'image_optim'
 # gem 'image_optim_pack'
 
@@ -105,11 +106,11 @@ gem 'sitemap_generator'
 
 gem 'pagy', '~> 3.5'
 
-gem 'active_record_extended'
+# gem 'active_record_extended'
 
 gem 'rack-attack'
 
-gem 'stimulus_reflex', '~> 3.4'
+gem 'stimulus_reflex', '~> 3.4.1'
 gem 'view_component', require: 'view_component/engine'
 gem 'view_component_reflex'
 # gem 'view_component_reflex', path: '/var/www/alegreme/gems/view_component_reflex', group: :development
@@ -144,15 +145,16 @@ end
 
 group :development do
 	# Access an interactive console on exception pages or by calling 'console' anywhere in the code.
-	gem 'web-console', '>= 3.3.0'
-	gem 'listen', '~> 3.2'
+	gem 'web-console', '>= 4.1.0'
+	# Display performance information such as SQL time and flame graphs for each request in your browser.
+	# Can be configured to work on production as well see: https://github.com/MiniProfiler/rack-mini-profiler/blob/master/README.md
+	gem 'rack-mini-profiler', '~> 2.0'
+	gem 'listen', '~> 3.3'
 	# Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
 	gem 'spring'
-	gem 'spring-watcher-listen', '~> 2.0.0'
+	# gem 'spring-watcher-listen', '~> 2.0.0'
 	gem 'awesome_print', require: 'ap'
-	gem 'meta_request'
 	gem 'niceql'
-	# gem 'rack-mini-profiler'
 	# gem 'active_record_doctor'
 	# gem 'bullet'
 end
