--- a/web/package.json
+++ b/web/package.json
@@ -33,7 +33,7 @@
     "simple-scrollbar": "^0.4.0",
     "sticky-sidebar": "^3.3.1",
     "stimulus": "^2.0.0",
-    "stimulus_reflex": "^3.3.0",
+    "stimulus_reflex": "3.4.1",
     "tailwindcss": "^2.0.1-compat",
     "tailwindcss-elevation": "^0.3.4",
     "velocity-animate": "^2.0.6"
