Fix Dockerfile in bundle/yarn
Undo docker-entrypoint

Fix in docker files and yarn

--- a/web/docker/sidekiq/Dockerfile
+++ b/web/docker/sidekiq/Dockerfile
@@ -44,11 +44,11 @@ ENTRYPOINT ["/docker-entrypoint.sh"]
 
 COPY . $SIDEKIQ_ROOT
 
-#RUN yarn install
-#
-#RUN bundle exec rake assets:clobber
-#RUN bundle exec rake webpacker:clobber
-#RUN bundle exec rake assets:precompile
-#RUN bundle exec rake webpacker:compile
+RUN yarn install
+
+RUN bundle exec rake assets:clobber; exit 0
+RUN bundle exec rake webpacker:clobber; exit 0
+RUN bundle exec rake assets:precompile
+RUN bundle exec rake webpacker:compile
 
 CMD bundle exec sidekiq -C config.yml
