--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,7 @@
     "channels": "^0.0.4",
     "chart.js": "^2.8.0",
     "chartkick": "^3.1.1",
+    "core-js": "^3.8.3",
     "default-passive-events": "^1.0.10",
     "expose-loader": "^0.7.5",
     "flipping": "^1.1.0",
