Fix amp mime type

--- a/web/Gemfile
+++ b/web/Gemfile
@@ -113,7 +113,7 @@ gem 'rack-attack'
 
 gem 'stimulus_reflex', '~> 3.4.1'
 gem 'view_component', require: 'view_component/engine'
-gem 'view_component_reflex'
+# gem 'view_component_reflex'
 
 group :production do
 	gem 'aws-sdk-s3'
