--- a/web/package.json
+++ b/web/package.json
@@ -33,10 +33,8 @@
     "stimulus": "^2.0.0",
     "stimulus_reflex": "3.4.1",
     "tailwindcss": "^2.0.1-compat",
-    "tailwindcss-animations": "^2.0.0",
     "tailwindcss-aspect-ratio": "^3.0.0",
-    "tailwindcss-elevation": "^0.3.4",
-    "velocity-animate": "^2.0.6"
+    "tailwindcss-elevation": "^0.3.4"
   },
   "devDependencies": {
     "tailwindcss-font-inter": "^1.0.8",
