--- a/web/package.json
+++ b/web/package.json
@@ -13,7 +13,7 @@
     "@rails/actioncable": "^6.0.3-2",
     "@rails/activestorage": "^6.0.3-2",
     "@rails/ujs": "^6.0.3-2",
-    "@rails/webpacker": "https://github.com/rails/webpacker",
+    "@rails/webpacker": "5.2.1",
     "autoprefixer": "^9",
     "channels": "^0.0.4",
     "chart.js": "^2.8.0",
@@ -39,6 +39,6 @@
   "devDependencies": {
     "tailwindcss-font-inter": "^1.0.8",
     "webpack-bundle-analyzer": "^3.8.0",
-    "webpack-dev-server": "^3.1.14"
+    "webpack-dev-server": "^3.11.2"
   }
 }
