--- a/scrapy/docker-compose.yml
+++ b/scrapy/docker-compose.yml
@@ -11,6 +11,9 @@ services:
       SPLASH_URL: http://splash:8050
       IS_DOCKER: 'true'
       ENV: 'production'
+      PRIVATE_IP: '10.136.227.110'
+      PUBLIC_IP: '159.89.84.18'
+      DOMAIN: 'www.alegreme.com'
     depends_on:
       - splash
     volumes:
