--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -35,6 +35,7 @@ services:
       RAILS_MAX_THREADS: 3
       ELASTICSEARCH_URL: http://search:9200
       REDIS_URL: redis://redis:6379/1
+      GOOGLE_APPLICATION_CREDENTIALS: /var/www/alegreme/config/google_application_credentials.json
     restart: always
     ports:
       - 3000:3000
@@ -82,5 +83,14 @@ services:
     memswap_limit: 2gb
     mem_reservation: 256m
     cpus: 1
+    restart: always
+  label-studio:
+    image: heartexlabs/label-studio:latest
+    command: label-studio start alegreme
+    ports: 
+      - 8080:8080
+    volumes: 
+      - ./ml/label-studio/alegreme:/label-studio/alegreme
+      - ./ml/label-studio/ml_backend:/label-studio/ml_backend
     restart: always
  
